#
# docs/sgml/Makefile.am
# SGML source files and SGML preparation logic for api, tutorial, and examples.
# HTML generation is handled by docs/html/.
#
NULL =

MODULE = xmlsec

# Source directories for API scanning
SOURCE_DIR  = $(top_srcdir)/src
SOURCE_DIR2 = $(top_builddir)/src
INCLUDE_DIR  = $(top_srcdir)/include
INCLUDE_DIR2 = $(top_builddir)/include

##############################################################################
# API SGML variables
##############################################################################
API_SCAN_DIR               = $(abs_builddir)/api
API_SGML_DIR               = $(abs_builddir)/api/sgml.tmp
API_GTKDOC_MKDB_OUTPUT_DIR = $(abs_builddir)/api/xml
API_SOURCE_CODE_DIR        = $(abs_builddir)/api/code

API_MAIN_SGML_SRC_FILE = $(srcdir)/api/xmlsec.sgml
API_MAIN_SGML_FILE     = $(API_SGML_DIR)/xmlsec.sgml

##############################################################################
# Tutorial SGML variables
##############################################################################
TUTORIAL_SGML_SRC_DIR  = $(srcdir)/tutorial
TUTORIAL_SGML_DIR      = $(builddir)/tutorial/sgml.tmp
TUTORIAL_MAIN_SGML_FILE = $(TUTORIAL_SGML_DIR)/xmlsec-tutorial.sgml

##############################################################################
# Examples SGML variables
##############################################################################
EXAMPLES_SGML_SRC_DIR  = $(srcdir)/examples
EXAMPLES_SGML_DIR      = $(builddir)/examples/sgml.tmp
EXAMPLES_EXAMPLES_DIR  = $(EXAMPLES_SGML_DIR)/examples
EXAMPLES_MAIN_SGML_FILE = $(EXAMPLES_SGML_DIR)/xmlsec-examples.sgml

EXAMPLES_SOURCE_DIR = $(top_srcdir)/examples
EXAMPLES_SOURCE_FILES = \
	$(shell find $(EXAMPLES_SOURCE_DIR) -name '*.c' -print) \
	$(shell find $(EXAMPLES_SOURCE_DIR) -name '*.xml' -print)

CRYPTO_LIBS_LIST = \
	openssl \
	nss \
	gnutls \
	mscng \
	mscrypto \
	gcrypt \
	$(NULL)

#
# We need to pre-process original source files
# because gtkdoc does not understand some C features
#
SOURCE_CODE_FILES = \
	$(shell find $(SOURCE_DIR)  -name '*.c' -print) \
	$(shell find $(SOURCE_DIR2) -name '*.c' -print) \
	$(shell find $(INCLUDE_DIR)  -name '*.h' -a ! -name "symbols.h" -print) \
	$(shell find $(INCLUDE_DIR2) -name '*.h' -a ! -name "symbols.h" -print)

# files that are distributed from sources
EXTRA_DIST := \
	$(srcdir)/api      \
	$(srcdir)/tutorial \
	$(srcdir)/examples \
	$(NULL)

.PHONY: all docs api-docs tutorial-docs examples-docs \
        api-sgml api-sgml-base api-scan api-xmlsec-index \
        tutorial-sgml examples-sgml examples-sources

all:
	@echo "======= Run 'make docs' in the xmlsec/docs folder to rebuild docs"

# if we have the build tools, run all three SGML prep steps
if BUILD_API_DOCS

docs: api-docs tutorial-docs examples-docs

else

docs:
	@(echo "=== ERROR: To build SGML docs, make sure all necessary tools are installed" ; exit 1; )

endif


##############################################################################
# API SGML generation
##############################################################################

api-docs: api-sgml api-xmlsec-index

#
# Fix up SGML/XML files generated by gtkdoc so they render correctly.
# Same fixups as in the original api/Makefile.am.
#
api-sgml: api-sgml-base $(API_MAIN_SGML_FILE) $(API_SGML_DIR)/.sentinel
	@(for i in `find $(API_SGML_DIR) -name "*.sgml" -or -name "*.xml" -print` ; do \
			echo "--- Fixing up '$$i'" ; \
	        cat $$i | \
	          $(SED) 's!\(<dsig:\)\([^/]*\)\(\/>\)!\&lt;dsig:\2\/\&gt;!g' | \
	          $(SED) 's!\(<enc:\)\([^/]*\)\(\/>\)!\&lt;enc:\2\/\&gt;!g' | \
	          $(SED) 's!\(<dsig:\)\(\w*\)\(>\)!\&lt;dsig:\2\/\&gt;!g' | \
	          $(SED) 's!\(<enc:\)\(\w*\)\(>\)!\&lt;enc:\2\/\&gt;!g' | \
	          $(SED) 's!\(&lt;dsig:\)\([^/]*\)\(\/&gt;\)!<ulink URL=\"http://www.w3.org/TR/xmldsig-core/#sec-\2\">\1\2\3</ulink>!g' | \
	          $(SED) 's!\(&lt;enc:\)\([^/]*\)\(\/&gt;\)!<ulink URL=\"http://www.w3.org/TR/xmlenc-core/#sec-\2\">\1\2\3</ulink>!g' | \
	          $(SED) 's!<para \/>!<para></para>!g' | \
	          $(SED) 's!linkend=\"\(.*\)Ptr\"!linkend=\"\1\"!g' | \
	          $(SED) 's!<colspec [^/]*\/>!!g' | \
	          $(SED) 's!<programlisting language="C"!<programlisting!g' | \
	          $(SED) 's!\%gtkdocentities;!!g' | \
	          $(SED) 's!title>\n!title>!g' | \
			  $(SED) 's!<\/title><\/refsect1>\n!<\/title><para><\/para><\/refsect1>!g' | \
			  $(SED) 's!para>\n!para>!g' > \
	          $$i.tmp; \
	        $(MV) -f $$i.tmp $$i; \
	 done);

$(API_MAIN_SGML_FILE): $(API_MAIN_SGML_SRC_FILE) $(API_SGML_DIR)/.sentinel
	@( \
		echo "-- Copying main sgml file..."; \
		$(CP) $(API_MAIN_SGML_SRC_FILE) $(API_MAIN_SGML_FILE) \
	)

#
# Create DocBook files from scanned source using gtkdoc-mkdb.
# gtkdoc-mkdb doesn't support --output-dir so we move its output.
#
api-sgml-base: api-scan $(API_SGML_DIR)/.sentinel
	@( \
	    echo "-- Create DocBook files for xmlsec-core" ; \
	    $(RM) -rf $(API_GTKDOC_MKDB_OUTPUT_DIR) $(API_SGML_DIR)/base ; \
	    cd $(API_SCAN_DIR) && $(GTKDOC_MKDB) --module=xmlsec \
		--xml-mode \
		--main-sgml-file=$(API_SGML_DIR)/xmlsec-base.sgml \
		--source-dir=$(API_SOURCE_CODE_DIR)/src/base \
		--source-dir=$(API_SOURCE_CODE_DIR)/include/xmlsec/base ; \
	    $(MV) $(API_SCAN_DIR)/xml $(API_SGML_DIR)/base ; \
	);
	@(for i in $(CRYPTO_LIBS_LIST) ; do \
	    echo "-- Create DocBook files for xmlsec-$$i" ; \
	    $(RM) -rf $(API_SCAN_DIR)/xml $(API_SGML_DIR)/$$i ; \
	    cd $(API_SCAN_DIR) && $(GTKDOC_MKDB) --module=xmlsec-$$i \
		--xml-mode \
		--main-sgml-file=$(API_SGML_DIR)/xmlsec-$$i.sgml \
		--source-dir=$(API_SOURCE_CODE_DIR)/src/$$i \
		--source-dir=$(API_SOURCE_CODE_DIR)/include/xmlsec/$$i ; \
	    $(MV) $(API_SCAN_DIR)/xml $(API_SGML_DIR)/$$i ; \
	done);

api-scan: api-SOURCE_CODEs
	@( \
	    echo "-- Scanning source code for xmlsec-core" ; \
	    $(GTKDOC_SCAN) --module=xmlsec \
	            --rebuild-sections \
		    --output-dir=$(API_SCAN_DIR) \
		    --source-dir=$(API_SOURCE_CODE_DIR)/src/base \
		    --source-dir=$(API_SOURCE_CODE_DIR)/include/xmlsec/base ; \
	);
	@(for i in $(CRYPTO_LIBS_LIST) ; do \
	    echo "-- Scanning source code for xmlsec-$$i" ; \
	    $(GTKDOC_SCAN) --module=xmlsec-$$i \
	            --rebuild-sections \
		    --output-dir=$(API_SCAN_DIR) \
		    --source-dir=$(API_SOURCE_CODE_DIR)/src/$$i \
		    --source-dir=$(API_SOURCE_CODE_DIR)/include/xmlsec/$$i ; \
	done);

#
# Prepare source files by copying them to the "code" folder and
# removing XMLSEC_EXPORT_* stuff that makes gtkdoc crazy.
#
api-SOURCE_CODEs: $(SOURCE_CODE_FILES) $(API_SOURCE_CODE_DIR)/.sentinel api-SOURCE_CODEs_cleanup
	@echo "-- Preprocessing source files into '$(API_SOURCE_CODE_DIR)' ..."
	@mkdir -p $(API_SOURCE_CODE_DIR)/src/base $(API_SOURCE_CODE_DIR)/include/xmlsec/base
	@( \
	for i in $(SOURCE_CODE_FILES) ; do \
		folder_name=`echo "$$i" | \
	        $(SED) 's#$(top_srcdir)/##' | \
	        $(SED) 's#$(top_builddir)/##' | \
	        $(SED) 's#/[^/]*$$##'`; \
	    file_name=`echo "$$i" | \
	        $(SED) 's#.*/##'`; \
	    mkdir -p "$(API_SOURCE_CODE_DIR)/$$folder_name"; \
	    cat "$$i" | \
	        $(SED) 's/#if.*//' | \
	        $(SED) 's/#el.*//' | \
	        $(SED) 's/#end.*//' | \
	        $(SED) 's/XMLSEC_CRYPTO_EXPORT//' | \
	        $(SED) 's/XMLSEC_EXPORT_VAR//' | \
	        $(SED) 's/XMLSEC_EXPORT//' | \
	        $(SED) 's/XMLSEC_ERRORS_PRINTF_ATTRIBUTE//' > \
	        $(API_SOURCE_CODE_DIR)/$$folder_name/$$file_name; \
	done);
	@$(MV) -f $(API_SOURCE_CODE_DIR)/src/*.c $(API_SOURCE_CODE_DIR)/src/base
	@$(MV) -f $(API_SOURCE_CODE_DIR)/include/xmlsec/*.h $(API_SOURCE_CODE_DIR)/include/xmlsec/base
	@$(RM) -f $(API_SOURCE_CODE_DIR)/include/xmlsec/*/symbols.h
	@echo "-- Remove macros documented in openssl module to avoid duplicate IDs"
	@$(SED) -i '/^#define XMLSEC_NO_MD5\b/d; /^#define XMLSEC_NO_EDDSA\b/d; /^#define XMLSEC_NO_HKDF\b/d' \
	    $(API_SOURCE_CODE_DIR)/include/xmlsec/nss/crypto.h

api-SOURCE_CODEs_cleanup: $(API_SOURCE_CODE_DIR)/.sentinel
	@$(RM) -rf $(API_SOURCE_CODE_DIR)/*

#
# Create index for all functions. For macros and defines need to add -CAPS suffix.
#
api-xmlsec-index: api-scan $(API_SGML_DIR)/.sentinel
	@$(GREP) -h '<NAME>.*</NAME>' $(API_SCAN_DIR)/xmlsec-*decl.txt | \
		$(GREP) -v '<NAME>extern</NAME>' | \
		$(SORT) -u | \
		$(SED) 's#_#-#g' | \
		$(SED) 's#<NAME>\([^-]*\)-\([^<]*\)</NAME>#<listitem><para><link linkend=\"\1-\2-CAPS\">\1-\2</link></para></listitem>#g' | \
		$(SED) 's#<NAME>\([^<]*\)</NAME>#<listitem><para><link linkend=\"\1\">\1</link></para></listitem>#g' > \
		$(API_SGML_DIR)/xmlsec-index.sgml


##############################################################################
# Tutorial SGML preparation
##############################################################################

tutorial-docs: tutorial-sgml

#
# Fix up SGML files (same fixups as API).
#
tutorial-sgml: $(TUTORIAL_MAIN_SGML_FILE) $(TUTORIAL_SGML_DIR)/.sentinel
	@(for i in `find $(TUTORIAL_SGML_DIR) -name "*.sgml" -or -name "*.xml" -print` ; do \
			echo "--- Fixing up '$$i'" ; \
	        cat $$i | \
	          $(SED) 's!\(<dsig:\)\([^/]*\)\(\/>\)!\&lt;dsig:\2\/\&gt;!g' | \
	          $(SED) 's!\(<enc:\)\([^/]*\)\(\/>\)!\&lt;enc:\2\/\&gt;!g' | \
	          $(SED) 's!\(<dsig:\)\(\w*\)\(>\)!\&lt;dsig:\2\/\&gt;!g' | \
	          $(SED) 's!\(<enc:\)\(\w*\)\(>\)!\&lt;enc:\2\/\&gt;!g' | \
	          $(SED) 's!\(&lt;dsig:\)\([^/]*\)\(\/&gt;\)!<ulink URL=\"http://www.w3.org/TR/xmldsig-core/#sec-\2\">\1\2\3</ulink>!g' | \
	          $(SED) 's!\(&lt;enc:\)\([^/]*\)\(\/&gt;\)!<ulink URL=\"http://www.w3.org/TR/xmlenc-core/#sec-\2\">\1\2\3</ulink>!g' | \
	          $(SED) 's!<para \/>!<para></para>!g' | \
	          $(SED) 's!linkend=\"\(.*\)Ptr\"!linkend=\"\1\"!g' | \
	          $(SED) 's!<colspec [^/]*\/>!!g' | \
	          $(SED) 's!<programlisting language="C"!<programlisting!g' | \
	          $(SED) 's!\%gtkdocentities;!!g' | \
	          $(SED) 's!title>\n!title>!g' | \
		  $(SED) 's!<\/title><\/refsect1>\n!<\/title><para><\/para><\/refsect1>!g' | \
		  $(SED) 's!para>\n!para>!g' > \
	          $$i.tmp; \
	        $(MV) -f $$i.tmp $$i; \
	 done);

$(TUTORIAL_MAIN_SGML_FILE): $(TUTORIAL_SGML_SRC_DIR)/xmlsec-tutorial.sgml $(TUTORIAL_SGML_DIR)/.sentinel
	@( \
		echo "-- Copying sgml source files..."; \
		$(CP) $(TUTORIAL_SGML_SRC_DIR)/*.sgml $(TUTORIAL_SGML_DIR)/ \
	)


##############################################################################
# Examples SGML preparation
##############################################################################

examples-docs: examples-sgml

#
# Fix up SGML files (same fixups as API).
#
examples-sgml: $(EXAMPLES_MAIN_SGML_FILE) examples-sources $(EXAMPLES_SGML_DIR)/.sentinel
	@(for i in `find $(EXAMPLES_SGML_DIR) -name "*.sgml" -or -name "*.xml" -print` ; do \
			echo "--- Fixing up '$$i'" ; \
	        cat $$i | \
	          $(SED) 's!\(<dsig:\)\([^/]*\)\(\/>\)!\&lt;dsig:\2\/\&gt;!g' | \
	          $(SED) 's!\(<enc:\)\([^/]*\)\(\/>\)!\&lt;enc:\2\/\&gt;!g' | \
	          $(SED) 's!\(<dsig:\)\(\w*\)\(>\)!\&lt;dsig:\2\/\&gt;!g' | \
	          $(SED) 's!\(<enc:\)\(\w*\)\(>\)!\&lt;enc:\2\/\&gt;!g' | \
	          $(SED) 's!\(&lt;dsig:\)\([^/]*\)\(\/&gt;\)!<ulink URL=\"http://www.w3.org/TR/xmldsig-core/#sec-\2\">\1\2\3</ulink>!g' | \
	          $(SED) 's!\(&lt;enc:\)\([^/]*\)\(\/&gt;\)!<ulink URL=\"http://www.w3.org/TR/xmlenc-core/#sec-\2\">\1\2\3</ulink>!g' | \
	          $(SED) 's!<para \/>!<para></para>!g' | \
	          $(SED) 's!linkend=\"\(.*\)Ptr\"!linkend=\"\1\"!g' | \
	          $(SED) 's!<colspec [^/]*\/>!!g' | \
	          $(SED) 's!<programlisting language="C"!<programlisting!g' | \
	          $(SED) 's!\%gtkdocentities;!!g' | \
	          $(SED) 's!title>\n!title>!g' | \
		  $(SED) 's!<\/title><\/refsect1>\n!<\/title><para><\/para><\/refsect1>!g' | \
		  $(SED) 's!para>\n!para>!g' > \
	          $$i.tmp; \
	        $(MV) -f $$i.tmp $$i; \
	 done);

$(EXAMPLES_MAIN_SGML_FILE): $(EXAMPLES_SGML_SRC_DIR)/xmlsec-examples.sgml $(EXAMPLES_SGML_SRC_DIR)/examples.sgml $(EXAMPLES_SGML_DIR)/.sentinel
	@( \
		echo "-- Copying sgml source files..."; \
		$(CP) $(EXAMPLES_SGML_SRC_DIR)/*.sgml $(EXAMPLES_SGML_DIR)/ \
	)

#
# Convert C example files to SGML RefEntry files.
# We get the file title from the string "XML Security Library example: ..."
# which is usually at the top of each file. Also, "unsafe" xml characters are
# escaped.
#
examples-sources: $(EXAMPLES_EXAMPLES_DIR)/.sentinel
	@echo "-- Preprocessing example source files into '$(EXAMPLES_EXAMPLES_DIR)' ..."
	@$(RM) -rf $(EXAMPLES_EXAMPLES_DIR)/*
	@(for i in $(EXAMPLES_SOURCE_FILES) ; do \
	    file_name=`echo $$i | $(SED) 's#.*/##' | $(SED) 's#\..*$$##'`; \
	    file_ext=`echo $$i | $(SED) 's#.*/##' | $(SED) 's#.*\.##'`; \
	    echo "--- Converting $$file_name.$$file_ext to $$file_name.sgml ..."; \
	    file_title=`cat $$i | $(GREP) 'XML Security Library example: ' | $(SED) 's#^.*: *##'`; \
	    echo "<sect2 id=\"xmlsec-example-$$file_name\" >" > \
	        $(EXAMPLES_EXAMPLES_DIR)/$$file_name.sgml; \
	    echo "<title>$$file_name.$$file_ext</title><para><informalexample><programlisting>" >> \
		    $(EXAMPLES_EXAMPLES_DIR)/$$file_name.sgml; \
	    cat $$i | \
		$(SED) "s#&#\&amp;#g" | \
		$(SED) "s#<#\&lt;#g" | \
		$(SED) "s#>#\&gt;#g" >> \
		    $(EXAMPLES_EXAMPLES_DIR)/$$file_name.sgml; \
	    echo "</programlisting></informalexample></para></sect2>" >> \
		    $(EXAMPLES_EXAMPLES_DIR)/$$file_name.sgml; \
	done);


##############################################################################
# Sentinel pattern — creates directories as needed
##############################################################################

# A single pattern rule will create all appropriate folders as required;
# otherwise make (annoyingly) deletes them.
.PRECIOUS: %/.sentinel
%/.sentinel:
	@echo "-- Creating folder '${@D}' ..."
	@mkdir -p ${@D}
	@touch $@


##############################################################################
# Maintenance targets
##############################################################################

clean-local:
	@$(RM) -rf $(API_SOURCE_CODE_DIR) $(API_SGML_DIR) $(API_GTKDOC_MKDB_OUTPUT_DIR)
	@$(RM) -f $(API_SCAN_DIR)/*.txt $(API_SCAN_DIR)/*.types $(API_SCAN_DIR)/*.bak $(API_SCAN_DIR)/index.sgml
	@$(RM) -rf $(TUTORIAL_SGML_DIR)
	@$(RM) -rf $(EXAMPLES_SGML_DIR)

distclean-local: clean-local
